fixed bug with CSS style on sort selector not showing correctly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -340,4 +340,8 @@ input[name='q']::placeholder {
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
+
+    #sort-selector{
+        margin-top: 50px;
+    }
 }
